--- a/html/shop/assets/dest/css/style.css
+++ b/html/shop/assets/dest/css/style.css
@@ -39,7 +39,7 @@ Version: 1.0
 	16. BETA SLIDES TWITTER
 	17. BETA MEDIA QUERY
 	18. FOOTER SECTION
-        
+
 
 ============================================================================= */
 
@@ -3945,7 +3945,7 @@ padding:45px 25px
 
 .beta-callout-box-b .pull-left {
 font-size:100px;
-color:#f90;
+color:#3a5c83;
 float:none!important;
 text-align:center
 }
@@ -4902,7 +4902,7 @@ filter: alpha(opacity=100);}
    -o-transition: all 0.4s ease-in-out;
    -ms-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;}
-   
+
 .beta-timer{background: white;
 float: left;
 padding: 10px 14px;
@@ -4989,7 +4989,7 @@ li.box-port-filter {display:inline;}
 .box-port-filter p.work-item-actions{position: absolute;
 top: 40%;
 left: 35%;}
-.nivo-prevNav {     
+.nivo-prevNav {
     text-indent: -9999px;
     width: 40px;
     height: 40px;
@@ -4998,7 +4998,7 @@ left: 35%;}
     background-image: url('../images/nivo-left.png');
     background-repeat: no-repeat;
     background-position: center;
-    
+
     -webkit-transition: all 0.2s ease 0s;
     -moz-transition: all 0.2s ease 0s;
     -o-transition: all 0.2s ease 0s;
@@ -5006,7 +5006,7 @@ left: 35%;}
     transition: all 0.2s ease 0s;
 }
 
-.nivo-nextNav {    
+.nivo-nextNav {
     text-indent: -9999px;
     width: 40px;
     height: 40px;
@@ -5015,7 +5015,7 @@ left: 35%;}
     background-image: url('../images/nivo-right.png');
     background-repeat: no-repeat;
     background-position: center;
-    
+
     -webkit-transition: all 0.2s ease 0s;
     -moz-transition: all 0.2s ease 0s;
     -o-transition: all 0.2s ease 0s;
@@ -5033,7 +5033,7 @@ left: 35%;}
 	background-color:#f90;
 }
 .nivoSlider{
-    position: relative;  
+    position: relative;
     margin: 0 auto;
     height: auto;
     z-index: 100;
