--- a/templates/EMAIL_TEMPLATES/new_template/index.html
+++ b/templates/EMAIL_TEMPLATES/new_template/index.html
@@ -164,7 +164,7 @@
 												<![endif]-->
 												<table border="0" cellpadding="0" cellspacing="0" width="100%"  style="display: inline-block;vertical-align: top;width:100%;max-width:319px">
 													<tr>
-														<td class="logo" width="319" style="text-align: center"><a href="#"><img src="images/Logo spain.png" alt=""  title=" " /></a></td>
+														<td class="logo" width="319" style="text-align: center"><a href="#"><img src="images/Logo_spain.png" alt=""  title=" " /></a></td>
 													</tr>
 												</table>
 												<!--[if (gte mso 9)|(IE)]>
