cambio de scr en imagenes,

--- a/templates/EMAIL_TEMPLATES/new_template/index.html
+++ b/templates/EMAIL_TEMPLATES/new_template/index.html
@@ -164,7 +164,7 @@
 												<![endif]-->
 												<table border="0" cellpadding="0" cellspacing="0" width="100%"  style="display: inline-block;vertical-align: top;width:100%;max-width:319px">
 													<tr>
-														<td class="logo" width="319" style="text-align: center"><a href="#"><img src="images/Logo_spain.png" alt=""  title=" " /></a></td>
+														<td class="logo" width="319" style="text-align: center"><a href="#"><img src="https://bbcdn.githack.com/afmp/roepa/raw/d032da8e8203169a0f49974afd39040fa9368a77/templates/EMAIL_TEMPLATES/new_template/images/Logo_spain.png" alt=""  title=" " /></a></td>
 													</tr>
 												</table>
 												<!--[if (gte mso 9)|(IE)]>
@@ -296,9 +296,9 @@ Website | www.roepa.e<br>  </td>
                       											<table align="center" cellspacing="0" cellpadding="0" border="0" width="100%">
                       												<tr>
                       										<td width="75"><img src="images/blank.gif" alt="" width="1" height="1" /></td>
-                      										<td><a href="https://www.facebook.com/spainroepa/"><img src="images/fb.png" alt="" width="52" height="52" /></a></td>
+                      										<td><a href="https://www.facebook.com/spainroepa/"><img src="https://bbcdn.githack.com/afmp/roepa/raw/d032da8e8203169a0f49974afd39040fa9368a77/templates/EMAIL_TEMPLATES/new_template/images/fb.png" alt="" width="52" height="52" /></a></td>
                       										<td width="18"><img src="images/blank.gif" alt="" width="1" height="1" /></td>
-                      										<td><a href="https://twitter.com/Roepa_EDB"><img src="images/tw.png" alt="" width="52" height="52" /></a></td>
+                      										<td><a href="https://twitter.com/Roepa_EDB"><img src="https://bbcdn.githack.com/afmp/roepa/raw/d032da8e8203169a0f49974afd39040fa9368a77/templates/EMAIL_TEMPLATES/new_template/images/tw.png" alt="" width="52" height="52" /></a></td>
 
 
 
