--- a/templates/EMAIL_TEMPLATES/new_template/index.html
+++ b/templates/EMAIL_TEMPLATES/new_template/index.html
@@ -7,7 +7,7 @@
 		<!--<![endif]-->
 		<meta name="format-detection" content="telephone=no">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>lastminute</title>
+		<title>Your request</title>
 		<link href="https://fonts.googleapis.com/css?family=Lato:400,300,700,900" rel="stylesheet" type="text/css">
 
 <!--[if (gte mso 9)|(IE)]>
@@ -234,6 +234,8 @@ After pressing "Enter", you will see the listed equipments with short descriptio
 													</tr>
 													<tr>
 														<td style="font-family: 'Lato', sans-serif;font-size:16px; font-weight:300; color:#484854;line-height:1.4;text-align: left;"> M.f.G./ Best regards, <br><br>
+
+														<a href="#"><img src="https://bbcdn.githack.com/afmp/roepa/raw/master/templates/EMAIL_TEMPLATES/new_template/images/roepa.png" width="150" alt=""  title=" " /></a><br><br>
 
 <b> HORST ROESINGER</b><br>
 Mobile Spain | +34 620.780.367<br>
