NEW TEMPLATE WITH CORRECTIONS

--- a/templates/EMAIL_TEMPLATES/new_template_2/index.html
+++ b/templates/EMAIL_TEMPLATES/new_template_2/index.html
@@ -164,7 +164,10 @@
 												<![endif]-->
 												<table border="0" cellpadding="0" cellspacing="0" width="100%"  style="display: inline-block;vertical-align: top;width:100%;max-width:319px">
 													<tr>
-														<td class="logo" width="319" style="text-align: center"><a href="#"><img src="https://bbcdn.githack.com/afmp/roepa/master/d032da8e8203169a0f49974afd39040fa9368a77/templates/EMAIL_TEMPLATES/new_template_2/images/banner-headquarters.png" alt=""  title=" " /></a></td>
+														<tr>
+															<td height="40"><img src="images/blank.gif" alt="" width="1" height="1" /></td>
+														</tr>
+														<td class="logo" width="600" style="text-align: center"><a href="#"><img src="https://bbcdn.githack.com/afmp/roepa/raw/master/templates/EMAIL_TEMPLATES/new_template_2/images/banner-headquarters.png" alt=""  title=" " width="600"/></a></td>
 													</tr>
 												</table>
 												<!--[if (gte mso 9)|(IE)]>
@@ -179,7 +182,7 @@
 														<td>
 														<table style="display: inline-block" align="center" border="0" cellpadding="0" cellspacing="0" >
 															<tr>
-																<td style="color:#fff; font-family: 'Lato', sans-serif;font-size:14px; font-weight: 400; text-transform: uppercase;"><a href="https://www.roepa.com" style="text-decoration: none; color:#083c76;" href="https://www.roepa.com">Home</a></td>
+																<td style="color:#fff; font-family: 'Lato', sans-serif;font-size:14px; font-weight: 400; text-transform: uppercase;"><a href="https://www.roepa.com" style="text-decoration: none; color: #083c76 ;" href="https://www.roepa.com">Home</a></td>
 																<td width="30"><img src="images/blank.gif" alt="" width="1" height="1" /></td>
 																<td style="color:#fff; font-family: 'Lato', sans-serif;font-size:14px; font-weight: 400; text-transform: uppercase;"><a href="https://www.roepa.com/en/branches/1" style="text-decoration: none; color:#083c76;" href="https://www.roepa.com/en/branches/1">Contact</a></td>
 																<td width="30"><img src="images/blank.gif" alt="" width="1" height="1"/></td>
@@ -216,7 +219,7 @@
 												<table width="100%" cellpadding="0" cellspacing="0" border="0">
 
 													<tr>
-														<td class="spacer-ad" height="71"><img src="images/blank.gif" alt="" width="1" height="1" /></td>
+														<td class="spacer-ad" height="40"><img src="images/blank.gif" alt="" width="1" height="1" /></td>
 													</tr>
 
 													<tr>
@@ -281,17 +284,53 @@
 
  All inquiries about rotary machines are processed by me personally. <br><br>
 													</tr>
+	<!-- SIGNATURE BEGINS -->
+
 													<tr>
-														<td style="font-family: 'Lato', sans-serif;font-size:16px; font-weight:300; color:#484854;line-height:1.4;text-align: left;"> M.f.G./ Best regards, <br><br>
+														<td style="font-family: 'Lato', sans-serif;font-size:16px; font-weight:300; color:#484854;line-height:1.4;text-align: left;">
 
-														<a href="#"><img src="https://bbcdn.githack.com/afmp/roepa/raw/master/templates/EMAIL_TEMPLATES/new_template/images/roepa.png" width="150" alt=""  title=" " /></a><br><br>
+															<table style="WIDTH: 350px; FONT-SIZE: 10pt; FONT-FAMILY: ARIAL" cellpadding="0" cellspacing="0">
+	  <tbody>
+	  <tr>
+	    <td style="FONT-SIZE: 10pt; FONT-FAMILY: Arial; WIDTH: 350px; PADDING-BOTTOM: 25px; vertical-align:top;" valign="top" colspan="2"><strong><span style="FONT-SIZE: 10pt; FONT-FAMILY: Arial; color:#021565; ">Best regards / M.f.G. / Salutations</span></strong><br><span style="FONT-SIZE: 10pt; FONT-FAMILY: Arial; color:#878787;"></span></td></tr>
+	  <tr>
+	  <tr>
+	    <td style="FONT-SIZE: 14pt; FONT-FAMILY: Arial; WIDTH: 350px; PADDING-BOTTOM: 10px; vertical-align:top;" valign="top" colspan="2"><strong><span style="FONT-SIZE: 14pt; FONT-FAMILY: Arial; color:#021565; ">Horst Roesinger</span></strong><br><span style="FONT-SIZE: 10pt; FONT-FAMILY: Arial; color:#878787;"></span></td></tr>
+	  <tr>
+	  <tr>
+	    <td style="FONT-SIZE: 10pt; FONT-FAMILY: Arial; PADDING-BOTTOM: 10px; PADDING-TOP: 10px; vertical-align:top;" valign="top" colspan="2">
+	     <a href="https://www.roepa.com" target="_blank"><img border="0" alt="Banner" width="100" style="width:100px; height:auto; border:0;" src="https://bytebucket.org/afmp/roepa/raw/master/images/logo.png"></a>	</td>
+	  </tr>
+	  <td style="FONT-SIZE: 10pt; BORDER-TOP: #021565 1px solid; FONT-FAMILY: Arial; color:#2c2c2c; PADDING-TOP: 10px; vertical-align:top;" valign="top" colspan="2">
+	   <span style="FONT-SIZE: 10pt; FONT-FAMILY: Arial; color:#2c2c2c;">Email: horst@roepa.com<br></span>
+	   <span style="FONT-SIZE: 10pt; FONT-FAMILY: Arial; color:#2c2c2c;">Mobile Germany: +49-(0)173.307.54.84<br></span>
+	   <span style="FONT-SIZE: 10pt; FONT-FAMILY: Arial; color:#2c2c2c;">Skype: horst.roesinger<br></span>
+	  </td>
+	  </tr>
+	  <tr>
+	    <td style="FONT-SIZE: 10pt; FONT-FAMILY: Arial; PADDING-BOTTOM: 10px; PADDING-TOP: 10px; vertical-align:top;" valign="top"><strong>	<a href="https://www.roepa.com" target="_blank"><span style=" FONT-SIZE: 10pt; FONT-FAMILY: Arial; color:#021565;">www.roepa.com</span></a></strong></td>
+	    <td style="FONT-SIZE: 10pt; FONT-FAMILY: Arial; PADDING-BOTTOM: 10px; PADDING-TOP: 10px; vertical-align:top; text-align:right;" valign="top" align="right">
+	     <span><a href="https://www.facebook.com/ROEPAEDB/" target="_blank"><img alt="Facebook icon" border="0" width="16" height="16" style="border:0; height:16px; width:16px" src="https://bytebucket.org/afmp/roepa/raw/master/images/fb.png"></a></span>
+	     <span><a href="https://www.linkedin.com/company/roepa-su-proveedor-de-maquinaria-para-la-industria-grafica/about/" target="_blank"><img alt="LinkedIn icon" border="0" width="16" height="16" style="border:0; height:16px; width:16px" src="https://bytebucket.org/afmp/roepa/raw/master/images/ln.png"></a></span>
+	     <span><a href="https://twitter.com/Roepa_EDB" target="_blank"><img alt="Twitter icon" border="0" width="16" height="16" style="border:0; height:16px; width:16px" src="https://bytebucket.org/afmp/roepa/raw/master/images/tt.png"></a></span>
+	     <span><a href="https://www.youtube.com/user/roepa12345" target="_blank"><img alt="Youtbue icon" border="0" width="16" height="16" style="border:0; height:16px; width:16px" src="https://bytebucket.org/afmp/roepa/raw/master/images/yt.png"></a></span>
+	     <span><a href="https://www.instagram.com/roepa_edb/" target="_blank"><img alt="Instagram icon" border="0" width="16" height="16" style="border:0; height:16px; width:16px" src="https://bytebucket.org/afmp/roepa/raw/master/images/it.png"></a> </span>										 </td>
+	  </tr>
+	  <tr>
+	    <td style="FONT-SIZE: 10pt; FONT-FAMILY: Arial; PADDING-BOTTOM: 10px; PADDING-TOP: 10px; vertical-align:top;" valign="top" colspan="2">
+	     <a href="https://www.roepa.com" target="_blank"><img border="0" alt="Banner" width="350" style="width:350px; height:auto; border:0;" src="https://bytebucket.org/afmp/roepa/raw/master/images/banner-team.png"></a>	</td>
+	  </tr>
+	  <tr>
+	    <td style="FONT-SIZE: 10pt; FONT-FAMILY: Arial; PADDING-TOP: 10px; vertical-align:top;" valign="top" colspan="2">
+	     <div style="color:#454545; FONT-SIZE: 9pt; FONT-FAMILY: Arial; text-align:justify; width:350px;" align="justify">	This message is confidential. It may also be privileged or otherwise protected by work product immunity or other legal rules. If you have received it by mistake, please let us know by e-mail reply and delete it from your system; you may not copy this message or disclose its contents to anyone. Please send us by fax any message containing deadlines as incoming e-mails are not screened for response deadlines. The integrity and security of this message cannot be guaranteed on the Internet.</div></td>
+	  </tr>
+	  </tbody>
+	 </table>
 
-<b> HORST ROESINGER</b><br>
-Mobile Spain | +34 620.780.367<br>
-Mobile Germany | +49 173.307.54.84 <br>
-Skype | horst.roesinger <br>
-email | horst@roepa.es <br>
-Website | www.roepa.e<br>  </td>
+	<!-- SIGNATURE ENDS -->
+
+
+													  </td>
 													</tr>
 
 													<tr>
@@ -318,99 +357,6 @@ Website | www.roepa.e<br>  </td>
 						</table></td>
 					</tr>
 
-
-
-
-                      <!-- 42 start -->
-
-
-                      <tr>
-                      	<td>
-                      		<table cellspacing="0" cellpadding="0" border="0" width="100%">
-                      			<tr>
-                      				<td height="0"><img src="images/blank.gif" alt="" width="1" height="1" /></td>
-                      			</tr>
-                      			<tr>
-                      				<td align="center">
-                      					<table align="center" cellspacing="0" cellpadding="0" border="0">
-                      						<tr>
-                      							<td width="496" align="center" style="font-size:0;text-align:center;">
-
-                      								<!--[if (gte mso 9)|(IE)]>
-								<table width="100%"  cellpadding="0" cellspacing="0" border="0">
-								<tr>
-								<td width="281"  valign="top">
-								<![endif]-->
-                      								<table align="center" style="display: inline-block;vertical-align: top;width:100%;max-width:281px" cellpadding="0" cellspacing="0" border="0">
-                      									<tr>
-                      										<td>
-                      											<table align="center" cellspacing="0" cellpadding="0" border="0" width="100%">
-                      												<tr>
-                      										<td width="75"><img src="images/blank.gif" alt="" width="1" height="1" /></td>
-                      										<td><a href="https://www.facebook.com/spainroepa/"><img src="https://bbcdn.githack.com/afmp/roepa/raw/d032da8e8203169a0f49974afd39040fa9368a77/templates/EMAIL_TEMPLATES/new_template/images/fb.png" alt="" width="52" height="52" /></a></td>
-                      										<td width="18"><img src="images/blank.gif" alt="" width="1" height="1" /></td>
-                      										<td><a href="https://twitter.com/Roepa_EDB"><img src="https://bbcdn.githack.com/afmp/roepa/raw/d032da8e8203169a0f49974afd39040fa9368a77/templates/EMAIL_TEMPLATES/new_template/images/tw.png" alt="" width="52" height="52" /></a></td>
-
-
-
-                      								</table>
-                      								<!--[if (gte mso 9)|(IE)]>
-								</td>
-								<td width="215"  valign="top">
-								<![endif]-->
-
-
-								</tr>
-								</table>
-								<![endif]-->
-
-                      							</td>
-                      						</tr>
-
-                      					</table>
-                      				</td>
-                      			</tr>
-                      			<tr>
-                      				<td height="30"><img src="images/blank.gif" alt="" width="1" height="1" /></td>
-                      			</tr>
-
-                      			<tr>
-                      				<td height="15"><img src="images/blank.gif" alt="" width="1" height="1" /></td>
-                      			</tr>
-                      			<tr>
-
-														</tr>
-                      				<td style="font-family: 'Lato', sans-serif;font-size:16px; font-weight:300;line-height:1.4; color:#484854;text-align: center;">ROEPA <br>
-H. ROESINGER+PARTNER SLU (Spain) <br>
-Poligono Industrial Fuente del Jarro <br>
-Ciutat el Ferrol, 21 <br>
-Paterna-Valencia (Spain) <br>
-Phone: +34 961.272.529 <br>
-</td>
-                      			</tr>
-                      			<tr>
-                      				<td height="60"><img src="images/blank.gif" alt="" width="1" height="1" /></td>
-                      			</tr>
-
-                      			<tr>
-                      				<td height="60"><img src="images/blank.gif" alt="" width="1" height="1" /></td>
-                      			</tr>
-                      		</table>
-                      	</td>
-                      </tr>
-
-
-                      <!-- 42 end -->
-
-
-
-
-
-
-
-
-				</table>
-				<!-- end table -->
 				</td>
 			</tr>
 
