changes in the text color and a mailto inserted.

--- a/templates/EMAIL_TEMPLATES/new_template_2/index.html
+++ b/templates/EMAIL_TEMPLATES/new_template_2/index.html
@@ -223,7 +223,7 @@
 													</tr>
 
 													<tr>
-														<td style="font-family: 'Lato', sans-serif;font-size:22px; font-weight:300; color:#484854;text-align: left;">Dear,</td>
+														<td style="font-family: 'Lato', sans-serif;font-size:22px; font-weight:300; color: black ;text-align: left;">Dear,</td>
 													</tr>
 
 													<tr>
@@ -231,7 +231,7 @@
 													</tr>
 
 													<tr>
-														<td style="font-family: 'Lato', sans-serif;font-size:15px; font-weight:300; color:#767781; line-height:1.6; word-spacing: 2px;text-align: justify;color:#767781;">Some time ago I sent you offers for WEB machines, but obviously they did not meet your expectations. <br><br> In order to submit suitable suggestions, I ask you for the following information:
+														<td style="font-family: 'Lato', sans-serif;font-size:15px; font-weight:300; color: black ; line-height:1.6; word-spacing: 2px;text-align: justify;color: black ;">Some time ago I sent you offers for WEB machines, but obviously they did not meet your expectations. <br><br> In order to submit suitable suggestions, I ask you for the following information:
 														<ul>
 															<li>
 																Preferred manufacturers:
@@ -276,13 +276,16 @@
 														</ul>
 													</tr>
 													<tr>
-													<td style="font-family: 'Lato', sans-serif;font-size:15px; font-weight:300; color:#767781; line-height:1.6; word-spacing: 2px;text-align: justify;color:#767781;">ROEPA delivers and installs all types of web machines around the world since more than 50 years.
+													<td style="font-family: 'Lato', sans-serif;font-size:15px; font-weight:300; color: black; line-height:1.6; word-spacing: 2px;text-align: justify;color: black;">ROEPA delivers and installs all types of web machines around the world since more than 50 years.
 
 
 
  <br><br> I would be very happy to work for you and I look forward to your esteemed return with interest.<br><br>
 
  All inquiries about rotary machines are processed by me personally. <br><br>
+
+Please press <u> <a href="mailto:horst@roepa.com" style="text-decoration: none; color: #083c76 ;" href="mailto:horst@roepa.com">here</a></u> to return your answers and reveive suitable suggestions (as inserted below). <br><br>
+
 													</tr>
 	<!-- SIGNATURE BEGINS -->
 
