changes made, spain information removed from horst template.

--- a/templates/EMAIL_TEMPLATES/new_template/index.html
+++ b/templates/EMAIL_TEMPLATES/new_template/index.html
@@ -162,9 +162,9 @@
 												<tr>
 												<td width="319"  valign="top">
 												<![endif]-->
-												<table border="0" cellpadding="0" cellspacing="0" width="100%"  style="display: inline-block;vertical-align: top;width:100%;max-width:319px">
+												<table border="0" cellpadding="0" cellspacing="0" width="100%"  style="display: inline-block;vertical-align: top;width:100%;max-width:270px">
 													<tr>
-														<td class="logo" width="319" style="text-align: center"><a href="#"><img src="https://bbcdn.githack.com/afmp/roepa/raw/d032da8e8203169a0f49974afd39040fa9368a77/templates/EMAIL_TEMPLATES/new_template/images/Logo_spain.png" alt=""  title=" " /></a></td>
+														<td class="logo" width="100" style="text-align: right"><a href="#"><img src="https://bbcdn.githack.com/afmp/roepa/raw/master/templates/EMAIL_TEMPLATES/new_template/images/roepa.png" width="200" alt=""  title=" " /></a></td>
 													</tr>
 												</table>
 												<!--[if (gte mso 9)|(IE)]>
@@ -238,11 +238,10 @@ After pressing "Enter", you will see the listed equipments with short descriptio
 														<a href="#"><img src="https://bbcdn.githack.com/afmp/roepa/raw/master/templates/EMAIL_TEMPLATES/new_template/images/roepa.png" width="150" alt=""  title=" " /></a><br><br>
 
 <b> HORST ROESINGER</b><br>
-Mobile Spain | +34 620.780.367<br>
-Mobile Germany | +49 173.307.54.84 <br>
+Mobile | +49 173.307.54.84 <br>
 Skype | horst.roesinger <br>
-email | horst@roepa.es <br>
-Website | www.roepa.e<br>  </td>
+email | horst@roepa.com <br>
+Website | www.roepa.com<br>  </td>
 													</tr>
 
 													<tr>
@@ -331,13 +330,7 @@ Website | www.roepa.e<br>  </td>
                       			<tr>
 
 														</tr>
-                      				<td style="font-family: 'Lato', sans-serif;font-size:16px; font-weight:300;line-height:1.4; color:#484854;text-align: center;">ROEPA <br>
-H. ROESINGER+PARTNER SLU (Spain) <br>
-Poligono Industrial Fuente del Jarro <br>
-Ciutat el Ferrol, 21 <br>
-Paterna-Valencia (Spain) <br>
-Phone: +34 961.272.529 <br>
-</td>
+
                       			</tr>
                       			<tr>
                       				<td height="60"><img src="images/blank.gif" alt="" width="1" height="1" /></td>
