--- a/templates/EMAIL_TEMPLATES/new_template/index.html
+++ b/templates/EMAIL_TEMPLATES/new_template/index.html
@@ -220,7 +220,7 @@
 													</tr>
 
 													<tr>
-														<td style="font-family: 'Lato', sans-serif;font-size:22px; font-weight:300; color:#484854;text-align: left;">Dear partner,</td>
+														<td style="font-family: 'Lato', sans-serif;font-size:22px; font-weight:300; color:#000000;text-align: left;">Dear partner,</td>
 													</tr>
 
 													<tr>
@@ -228,12 +228,12 @@
 													</tr>
 
 													<tr>
-														<td style="font-family: 'Lato', sans-serif;font-size:15px; font-weight:300; color:#767781; line-height:1.6; word-spacing: 2px;text-align: justify;color:#767781;">Thank you very much for your inquiry.
-It will be easier and quicker if you search for the requested equipment by yourself directly in our homepage, and please do the following:  <br><br>  <a href="#"  style="color:#767781;font-size:16px; ">Click here</a> and write the first figure of the requested model in the box "model". Scroll box will open and press on the model you may be interested in. <br> In addition you have the possibility to search also the age of requested equipment by open the box "year".
-After pressing "Enter", you will see the listed equipments with short descriptions and by pressing our offer-number you will get a long description. <br><br> If you haven't found the correct machine you are looking for, just register your request directly <a href="#"  style="color:#767781;font-size:16px; ">here</a> and you will receive automatically any new listing by Email, matching your specifications. For additional informations do not hesitate to contact us. Looking forward to your earliest reply, and I remain.<br> <br><br><br>   </td>
+														<td style="font-family: 'Lato', sans-serif;font-size:15px; font-weight:300; color:#000000; line-height:1.6; word-spacing: 2px;text-align: justify;color:#000000;;">Thank you very much for your inquiry.
+It will be easier and quicker if you search for the requested equipment by yourself directly in our homepage, and please do the following:  <br><br>  <a href="#"  style="color:#000000;;font-size:16px; ">Click here</a> and write the first figure of the requested model in the box "model". Scroll box will open and press on the model you may be interested in. <br> In addition you have the possibility to search also the age of requested equipment by open the box "year".
+After pressing "Enter", you will see the listed equipments with short descriptions and by pressing our offer-number you will get a long description. <br><br> If you haven't found the correct machine you are looking for, just register your request directly <a href="#"  style="color:#000000;;font-size:16px; ">here</a> and you will receive automatically any new listing by Email, matching your specifications. For additional informations do not hesitate to contact us. Looking forward to your earliest reply, and I remain.<br> <br><br><br>   </td>
 													</tr>
 													<tr>
-														<td style="font-family: 'Lato', sans-serif;font-size:16px; font-weight:300; color:#484854;line-height:1.4;text-align: left;"> M.f.G./ Best regards, <br><br>
+														<td style="font-family: 'Lato', sans-serif;font-size:16px; font-weight:300; color:#000000;line-height:1.4;text-align: left;"> M.f.G./ Best regards, <br><br>
 
 														<a href="#"><img src="https://bbcdn.githack.com/afmp/roepa/raw/master/templates/EMAIL_TEMPLATES/new_template/images/roepa.png" width="150" alt=""  title=" " /></a><br><br>
 
